# wasm-prototyping

./: .gitignore  CMakeLists.txt  README.md  build.sh  hello.html  index.html  index.js  output.html  package-lock.json  package.json  threads.html
src/: hello.c  hello.cpp  threads.c
